[package]
name = "exp-tracker"
version = "1.0.0"
edition = "2021"

[package.metadata.winres]
OriginalFilename = "exp-tracker.exe"
LegalCopyright = "Copyright © 2024"
FileDescription = "Ravendawn Tools"
ProductName = "Ravendawn Tools"
ProductVersion = "1.0.0"

[build-dependencies]
winres = "0.1"

[dependencies]
egui = "0.25.0"
eframe = "0.25.0"
winapi = { version = "0.3.9", features = ["minwindef", "winnt", "minwinbase", "psapi", "winsvc", "handleapi", "fileapi", "ioapiset", "processthreadsapi", "winerror", "processenv", "tlhelp32", "winuser", "stralign", "memoryapi", "wow64apiset", "errhandlingapi", "libloaderapi"] }
sysinfo = "0.30.0"
regex = "1.7.1"
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
lazy_static = "1.4.0"
obfstr = "0.4.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[dependencies.windows]
features = [
    "Win32_Foundation",
    "Win32_Gaming",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Hlsl",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Networking_Ldap",
    "Win32_Networking_WinSock",
    "Win32_Security_Authorization",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_UI_Animation",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
]

[features]
default = ["persistence"]
persistence = [
    "eframe/persistence",
    "egui/persistence",
    "serde",
] # Enable if you want to persist app state on shutdown

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
